--- a/style.css
+++ b/style.css
@@ -4,3 +4,27 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+.nav_logo{
+    justify-content: left;
+}
+.nav_header{
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+}   
+.nav_menu1 li {
+    justify-content: space-between;
+    align-items: center;
+    gap: 7px;
+    
+    
+}
+.Jumbotron{
+    width: 100%;
+    display: flex;
+    background-color: #e2e3e5;
+}
+.Jumbotron_right
+{
+    margin-top: 300px;
+}
